# DistributedStockManagement

./: README.md
ecommerce/: Cargo.toml
ecommerce/src/: ecommerce.rs  ecommerce_const.rs  ecommerce_error.rs  lib.rs  main.rs
orders/: orders_ecommerce.txt  orders_local_0.txt  stock_inicial_0.txt  stock_inicial_1.txt  stock_inicial_2.txt
shop/: Cargo.toml
shop/src/: incomplete_order.rs  incomplete_order_errors.rs  inventory.rs  lib.rs  main.rs  offline_shop.rs  order.rs  order_deliverer.rs  shop.rs  shop_const.rs  shop_error.rs  syn.rs  token.rs
