[package]
name = "shop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.192", features=["derive"]}
serde_json = "1.0.108"
async-std = "1.12.0"
tokio = {version = "1.34.0", features=["full"]}
actix = "0.13.1"
actix-rt = "2.9.0"
rand = "0.8.5"
colored = "2.0"